src/test/resources/org/nest/nestml/_cocos/invalid/assignmentToAlias.nestml
neuron A:
  state:
    alias a ms = 15.0
  end

  update:
    a = 12 # error
  end
end
